--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,7 @@ http {
     listen       80;
     root /var/www/html/code;
     index index.php index.html;
+    server_tokens off;
 
     # serve static files directly
         location ~* \.(jpg|jpeg|gif|css|png|js|ico|html)$ {
